# MultiMiddleware

./: .gitignore  README.md
Middleware/MiddlewareLoader/c++/MiddlewareLoader/: CMakeLists.txt  Compile.py
Middleware/MiddlewareLoader/c++/MiddlewareLoader/exemplos/ConsoleChat/: Leia-me.txt
Middleware/MiddlewareLoader/c++/MiddlewareLoader/exemplos/ConsoleChat/CHAT1/Client/: Client.cpp
Middleware/MiddlewareLoader/c++/MiddlewareLoader/exemplos/ConsoleChat/CHAT1/Server/: Server.cpp
Middleware/MiddlewareLoader/c++/MiddlewareLoader/exemplos/ConsoleChat/CHAT2/Server/: Events.hpp  main.cpp
Middleware/MiddlewareLoader/c++/MiddlewareLoader/exemplos/ConsoleChat/CHAT3/Client/: Client.cpp
Middleware/MiddlewareLoader/c++/MiddlewareLoader/exemplos/ConsoleChat/CHAT3/Server/: main.cpp
Middleware/MiddlewareLoader/c++/MiddlewareLoader/exemplos/http_server/Server/: main.cpp
Middleware/MiddlewareLoader/c++/MiddlewareLoader/exemplos/http_server/Server/ModuloHttp/: modulo.hpp
Middleware/MiddlewareLoader/c++/MiddlewareLoader/exemplos/http_server/Server/public/: index.html
Middleware/MiddlewareLoader/c++/MiddlewareLoader/exemplos/websocket/Server/: WBClient.hpp  main.cpp
Middleware/MiddlewareLoader/c++/MiddlewareLoader/exemplos/websocket/Server/ModuloHttp/: bodyparser.hpp
Middleware/MiddlewareLoader/c++/MiddlewareLoader/include/: Buffer.cpp  Buffer.h  ErrorMessage.cpp  EventTypes.h  MiddlewareModule.cpp  MiddlewareModule.h  Socket.cpp  Utility.cpp
Middleware/MiddlewareLoader/c++/MiddlewareLoader/include/Tcp/: AsyncClient.cpp  AsyncServer.h  SyncClient.cpp  SyncClient.h
c++/: CMakeLists.txt  COMPILE.bat  Compile.py
python/: Buffer.py  main.py
(+50 files in other folders)
